<resources>
    <string name="app_name">Ranch Life</string>
    <string name="facebook_app_id">775258979287833</string>
    <string name="weather_app_id">cb01ba268586d4c8256c487b9ed33baf</string>
    <string name="check_network_connection">Please check your network connection</string>
    <string name="check_all_fileds">Please check all fields</string>
    <string name="connection_failed">Connection Failed!</string>
    <string name="logged_in_successfully">"Logged in as %1$s"</string>
    <string name="sign_up_successfully">Sign Up was Successful</string>
    <string name="loggin_alert_title">Ranch Life</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_title">Ranch Life</string>
    <string name="sign_in">Sign In</string>
    <string name="join_us">Join Us</string>
    <string name="lorem_ipsum">LOREM IPSUM</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="input_your_email">Input your email</string>
    <string name="check_internet_connection">Please check your internet connection.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="home">Home</string>
    <string name="my_ranch_life">My Ranch Life</string>
    <string name="community_calendar">Community Calendar</string>
    <string name="parks_amp_amenities"><![CDATA[Parks & Amenities]]></string>
    <string name="following">Following</string>
    <string name="settings">Settings</string>
    <string name="user_management">User Management</string>
    <string name="user_role_management">User Role Management</string>
    <string name="trigger_management">Trigger Management</string>
    <string name="events_management">Events Management</string>
    <string name="parks_amp_amenities_management"><![CDATA[Parks & Amenities Management]]></string>
    <string name="logout">Log out</string>
    <string name="profile">PROFILE</string>
    <string name="admin">Admin</string>
    <string name="logout_str">LOGOUT</string>
    <string name="happenning_ntoday">Upcoming Events</string>
    <string name="my_ranch_n_life">My Ranch\n Life</string>
    <string name="parks_amp_n_amenities"><![CDATA[Parks &  Amenities]]></string>
    <string name="community_n_calendar">Community  Calendar</string>
    <string name="wi_day_cloudy_gusts">&#xf000;</string>
    <string name="wi_day_cloudy_windy">&#xf001;</string>
    <string name="wi_day_cloudy">&#xf002;</string>
    <string name="wi_day_fog">&#xf003;</string>
    <string name="wi_day_hail">&#xf004;</string>
    <string name="wi_day_lightning">&#xf005;</string>
    <string name="wi_day_rain_mix">&#xf006;</string>
    <string name="wi_day_rain_wind">&#xf007;</string>
    <string name="wi_day_rain">&#xf008;</string>
    <string name="wi_day_showers">&#xf009;</string>
    <string name="wi_day_snow">&#xf00a;</string>
    <string name="wi_day_sprinkle">&#xf00b;</string>
    <string name="wi_day_sunny_overcast">&#xf00c;</string>
    <string name="wi_day_sunny">&#xf00d;</string>
    <string name="wi_day_storm_showers">&#xf00e;</string>
    <string name="wi_day_thunderstorm">&#xf010;</string>
    <string name="wi_cloudy_gusts">&#xf011;</string>
    <string name="wi_cloudy_windy">&#xf012;</string>
    <string name="wi_cloudy">&#xf013;</string>
    <string name="wi_fog">&#xf014;</string>
    <string name="wi_hail">&#xf015;</string>
    <string name="wi_lightning">&#xf016;</string>
    <string name="wi_rain_mix">&#xf017;</string>
    <string name="wi_rain_wind">&#xf018;</string>
    <string name="wi_rain">&#xf019;</string>
    <string name="wi_showers">&#xf01a;</string>
    <string name="wi_snow">&#xf01b;</string>
    <string name="wi_sprinkle">&#xf01c;</string>
    <string name="wi_storm_showers">&#xf01d;</string>
    <string name="wi_thunderstorm">&#xf01e;</string>
    <string name="wi_windy">&#xf021;</string>
    <string name="wi_night_alt_cloudy_gusts">&#xf022;</string>
    <string name="wi_night_alt_cloudy_windy">&#xf023;</string>
    <string name="wi_night_alt_hail">&#xf024;</string>
    <string name="wi_night_alt_lightning">&#xf025;</string>
    <string name="wi_night_alt_rain_mix">&#xf026;</string>
    <string name="wi_night_alt_rain_wind">&#xf027;</string>
    <string name="wi_night_alt_rain">&#xf028;</string>
    <string name="wi_night_alt_showers">&#xf029;</string>
    <string name="wi_night_alt_snow">&#xf02a;</string>
    <string name="wi_night_alt_sprinkle">&#xf02b;</string>
    <string name="wi_night_alt_storm_showers">&#xf02c;</string>
    <string name="wi_night_alt_thunderstorm">&#xf02d;</string>
    <string name="wi_night_clear">&#xf02e;</string>
    <string name="wi_night_cloudy_gusts">&#xf02f;</string>
    <string name="wi_night_cloudy_windy">&#xf030;</string>
    <string name="wi_night_cloudy">&#xf031;</string>
    <string name="wi_night_hail">&#xf032;</string>
    <string name="wi_night_lightning">&#xf033;</string>
    <string name="wi_night_rain_mix">&#xf034;</string>
    <string name="wi_night_rain_wind">&#xf035;</string>
    <string name="wi_night_rain">&#xf036;</string>
    <string name="wi_night_showers">&#xf037;</string>
    <string name="wi_night_snow">&#xf038;</string>
    <string name="wi_night_sprinkle">&#xf039;</string>
    <string name="wi_night_storm_showers">&#xf03a;</string>
    <string name="wi_night_thunderstorm">&#xf03b;</string>
    <string name="wi_celsius">&#xf03c;</string>
    <string name="wi_cloud_down">&#xf03d;</string>
    <string name="wi_cloud_refresh">&#xf03e;</string>
    <string name="wi_cloud_up">&#xf040;</string>
    <string name="wi_cloud">&#xf041;</string>
    <string name="wi_degrees">&#xf042;</string>
    <string name="wi_down_left">&#xf043;</string>
    <string name="wi_down">&#xf044;</string>
    <string name="wi_fahrenheit">&#xf045;</string>
    <string name="wi_horizon_alt">&#xf046;</string>
    <string name="wi_horizon">&#xf047;</string>
    <string name="wi_left">&#xf048;</string>
    <string name="wi_night_fog">&#xf04a;</string>
    <string name="wi_refresh_alt">&#xf04b;</string>
    <string name="wi_refresh">&#xf04c;</string>
    <string name="wi_right">&#xf04d;</string>
    <string name="wi_sprinkles">&#xf04e;</string>
    <string name="wi_strong_wind">&#xf050;</string>
    <string name="wi_sunrise">&#xf051;</string>
    <string name="wi_sunset">&#xf052;</string>
    <string name="wi_thermometer_exterior">&#xf053;</string>
    <string name="wi_thermometer_internal">&#xf054;</string>
    <string name="wi_thermometer">&#xf055;</string>
    <string name="wi_tornado">&#xf056;</string>
    <string name="wi_up_right">&#xf057;</string>
    <string name="wi_up">&#xf058;</string>
    <string name="wi_wind_west">&#xf059;</string>
    <string name="wi_wind_south_west">&#xf05a;</string>
    <string name="wi_wind_south_east">&#xf05b;</string>
    <string name="wi_wind_south">&#xf05c;</string>
    <string name="wi_wind_north_west">&#xf05d;</string>
    <string name="wi_wind_north_east">&#xf05e;</string>
    <string name="wi_wind_north">&#xf060;</string>
    <string name="wi_wind_east">&#xf061;</string>
    <string name="wi_smoke">&#xf062;</string>
    <string name="wi_dust">&#xf063;</string>
    <string name="wi_snow_wind">&#xf064;</string>
    <string name="wi_day_snow_wind">&#xf065;</string>
    <string name="wi_night_snow_wind">&#xf066;</string>
    <string name="wi_night_alt_snow_wind">&#xf067;</string>
    <string name="wi_day_sleet_storm">&#xf068;</string>
    <string name="wi_night_sleet_storm">&#xf069;</string>
    <string name="wi_night_alt_sleet_storm">&#xf06a;</string>
    <string name="wi_day_snow_thunderstorm">&#xf06b;</string>
    <string name="wi_night_snow_thunderstorm">&#xf06c;</string>
    <string name="wi_night_alt_snow_thunderstorm">&#xf06d;</string>
    <string name="wi_solar_eclipse">&#xf06e;</string>
    <string name="wi_lunar_eclipse">&#xf070;</string>
    <string name="wi_meteor">&#xf071;</string>
    <string name="wi_hot">&#xf072;</string>
    <string name="wi_hurricane">&#xf073;</string>
    <string name="wi_smog">&#xf074;</string>
    <string name="wi_alien">&#xf075;</string>
    <string name="wi_snowflake_cold">&#xf076;</string>
    <string name="wi_stars">&#xf077;</string>
    <string name="wi_moon_full">&#xf078;</string>
    <string name="wi_moon_waxing_gibbous">&#xf079;</string>
    <string name="wi_moon_waxing_quarter">&#xf07a;</string>
    <string name="wi_moon_waxing_crescent">&#xf07b;</string>
    <string name="wi_moon_young">&#xf07c;</string>
    <string name="wi_moon_new">&#xf07d;</string>
    <string name="wi_moon_old">&#xf07e;</string>
    <string name="wi_moon_waning_crescent">&#xf080;</string>
    <string name="wi_moon_waning_quarter">&#xf081;</string>
    <string name="wi_moon_waning_gibbous">&#xf082;</string>
    <string name="wi_night_partly_cloudy">&#xf083;</string>
    <string name="check_email_pwd">Please check your email and password</string>
    <string name="check_email_box">You should enter passcode. Please check your emailbox.</string>
    <string name="for_you">For You</string>
    <string name="saved">Saved</string>
    <string name="recommended_by">Recommended By:</string>
    <string name="i_am_interested">I am Interested</string>
    <string name="directions">Directions</string>
    <string name="put_in_calendar">Put In Calendar</string>
    <string name="date_and_time">DATE AND TIME</string>
    <string name="location">LOCATION</string>
    <string name="no_reservation_required">No reservation required</string>
    <string name="claim_offer">Claim Offer</string>
    <string name="open">Open</string>
    <string name="reserve">Reserve</string>
</resources>
