<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_navigation_item_home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/main_navigation_item_feed"
            android:title="@string/my_ranch_life"
            />
        <item
            android:id="@+id/main_navigation_item_community"
            android:title="@string/community_calendar"
            />
        <item
            android:id="@+id/main_navigation_item_pa"
            android:title="@string/parks_amp_amenities"/>
        <item
            android:id="@+id/main_navigation_item_following"
            android:title="@string/following"
            />
        <item
            android:id="@+id/main_navigation_item_settings"
            android:title="@string/settings"
            />
        <item
            android:id="@+id/main_navigation_item_user_management"
            android:title="@string/user_management"
            />
        <item
            android:id="@+id/main_navigation_item_role_management"
            android:title="@string/user_role_management"
            />
        <item
            android:id="@+id/main_navigation_item_trigger_management"
            android:title="@string/trigger_management"
            />
        <item
            android:id="@+id/main_navigation_item_event_management"
            android:title="@string/events_management"
            />
        <item
            android:id="@+id/main_navigation_item_pa_management"
            android:title="@string/parks_amp_amenities_management"
            />
    </group>
</menu>